--- a/src/main/java/client/gui/MainGui.form
+++ b/src/main/java/client/gui/MainGui.form
@@ -1,13 +1,162 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="client.gui.MainGui">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="mainPane" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-3355444"/>
+      <font name="Arial" size="16"/>
+    </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <grid id="ef3cd" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="8" left="16" bottom="8" right="16"/>
+        <constraints border-constraint="North"/>
+        <properties>
+          <background color="-2236963"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="cbffe" class="javax.swing.JButton" binding="authLogoutButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="12"/>
+              <text value="Logout"/>
+            </properties>
+          </component>
+          <component id="c1e5b" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12879927"/>
+              <font size="16" style="3"/>
+              <foreground color="-12879927"/>
+              <text value="Health First App"/>
+            </properties>
+          </component>
+          <hspacer id="b0df5">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+        </children>
+      </grid>
+      <grid id="410cc" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="8" left="16" bottom="8" right="16"/>
+        <constraints border-constraint="West"/>
+        <properties>
+          <background color="-12879927"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="9f6f4" class="javax.swing.JButton" binding="authRegisterButton">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="160" height="48"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Register User"/>
+            </properties>
+          </component>
+          <component id="4cb90" class="javax.swing.JButton" binding="bookingRequestButton">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="160" height="48"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Request Appointment"/>
+            </properties>
+          </component>
+          <component id="52d65" class="javax.swing.JButton" binding="bookingUpdateButton">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="160" height="48"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Update Appointment"/>
+            </properties>
+          </component>
+          <component id="726a3" class="javax.swing.JButton" binding="bookingCancelButton">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="160" height="48"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Cancel Appointment"/>
+            </properties>
+          </component>
+          <component id="c9e9f" class="javax.swing.JButton" binding="prescruptionCreateButton">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="160" height="48"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Create Prescription"/>
+            </properties>
+          </component>
+          <component id="b7de7" class="javax.swing.JButton" binding="prescriptionsDisplayAllButton">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="160" height="48"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Display All Prescriptions"/>
+            </properties>
+          </component>
+          <component id="981df" class="javax.swing.JButton" binding="prescriptionsDisplayButton">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="160" height="48"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Display Prescription"/>
+            </properties>
+          </component>
+          <component id="c8931" class="javax.swing.JButton" binding="dashboardButton" default-binding="true">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="160" height="48"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Dashboard"/>
+            </properties>
+          </component>
+          <vspacer id="46a2d">
+            <constraints>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+        </children>
+      </grid>
+      <grid id="8a974" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="16" left="16" bottom="16" right="16"/>
+        <constraints border-constraint="Center"/>
+        <properties>
+          <background color="-3355444"/>
+        </properties>
+        <border type="none"/>
+        <children/>
+      </grid>
+    </children>
   </grid>
 </form>
