--- a/src/main/java/client/gui/MainGui.form
+++ b/src/main/java/client/gui/MainGui.form
@@ -271,7 +271,7 @@
                     </constraints>
                     <properties>
                       <font size="16" style="1"/>
-                      <text value="SUBMIT"/>
+                      <text value="REGISTER USER"/>
                     </properties>
                   </component>
                   <vspacer id="712ad">
@@ -999,7 +999,7 @@
                     </properties>
                     <border type="none"/>
                     <children>
-                      <grid id="a14b" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="8">
+                      <grid id="a14b" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="8">
                         <margin top="16" left="16" bottom="16" right="16"/>
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1055,7 +1055,7 @@
                           <grid id="488c8" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="8" vgap="-1">
                             <margin top="0" left="0" bottom="0" right="0"/>
                             <constraints>
-                              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <background color="-3355444"/>
@@ -1092,7 +1092,7 @@
                           <grid id="63e71" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="8" vgap="-1">
                             <margin top="0" left="0" bottom="0" right="0"/>
                             <constraints>
-                              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <background color="-3355444"/>
@@ -1129,7 +1129,7 @@
                           <grid id="2fa5" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="8" vgap="-1">
                             <margin top="0" left="0" bottom="0" right="0"/>
                             <constraints>
-                              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <background color="-3355444"/>
@@ -1288,7 +1288,7 @@
                           </grid>
                           <component id="7caa0" class="javax.swing.JButton" binding="cancelBookingButton">
                             <constraints>
-                              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                                 <preferred-size width="-1" height="48"/>
                               </grid>
                             </constraints>
@@ -1299,9 +1299,20 @@
                           </component>
                           <vspacer id="faba9">
                             <constraints>
-                              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                             </constraints>
                           </vspacer>
+                          <component id="4aa3f" class="javax.swing.JButton" binding="getDataCancelBookingButton">
+                            <constraints>
+                              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                                <preferred-size width="-1" height="48"/>
+                              </grid>
+                            </constraints>
+                            <properties>
+                              <font size="16" style="1"/>
+                              <text value="GET APPOINTMENT"/>
+                            </properties>
+                          </component>
                         </children>
                       </grid>
                       <grid id="6fb9d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -1416,7 +1427,7 @@
                             </constraints>
                             <properties>
                               <font size="16" style="1"/>
-                              <text value="SUBMIT"/>
+                              <text value="GET APPOINTMENTS"/>
                             </properties>
                           </component>
                           <vspacer id="a3d9f">
